[project]
name = "chatbot-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "altair>=6.0.0",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "attrs>=25.4.0",
    "bcrypt>=5.0.0",
    "blinker>=1.9.0",
    "cachetools>=7.0.5",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.5",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "ddgs>=9.11.4",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.46",
    "greenlet>=3.3.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "jiter>=0.13.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.11",
    "langsmith>=0.7.17",
    "markupsafe>=3.0.3",
    "narwhals>=2.18.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "orjson>=3.11.7",
    "ormsgpack>=1.12.2",
    "packaging>=26.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydeck>=0.9.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "referencing>=0.37.0",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "rpds-py>=0.30.0",
    "serpapi>=0.1.5",
    "six>=1.17.0",
    "smmap>=5.0.3",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.48",
    "sqlite-vec>=0.1.6",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.23",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "toml>=0.10.2",
    "tornado>=6.5.5",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "watchdog>=6.0.0",
    "xxhash>=3.6.0",
    "zstandard>=0.25.0",
]
